# vladimir

./: CMakeLists.txt  LICENSE  README.md
src/vladimir/: CMakeLists.txt  main.cpp  scraper.cpp  scraper.hpp
src/vladimir/parsers/: category_parser.hpp
